[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-tree-tool"
version = "0.1.0"
description = "A command-line tool to generate a directory tree view with optional filtering."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "click >= 8.0.0"
]
scripts = { "codebase-tree" = "codebase_tree_tool:generate_tree" }
